--- a/Serial Vision/Assets/Base.lproj/Main.storyboard
+++ b/Serial Vision/Assets/Base.lproj/Main.storyboard
@@ -36,9 +36,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="db5-50-M4f">
-                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="db5-50-M4f">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="db5-50-M4f" secondAttribute="height" multiplier="9:16" id="L6d-Fl-LKG"/>
+                                </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bjM-jt-gk8" customClass="SerialCodeView" customModule="Serial_Vision" customModuleProvider="target">
                                 <rect key="frame" x="166.5" y="559.5" width="42" height="20.5"/>
@@ -55,12 +57,15 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="eKw-jz-IKZ" firstAttribute="centerY" secondItem="bjM-jt-gk8" secondAttribute="centerY" id="26V-KZ-mFK"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="bjM-jt-gk8" secondAttribute="bottom" constant="38" id="CFU-0W-xeC"/>
-                            <constraint firstItem="eKw-jz-IKZ" firstAttribute="centerX" secondItem="bjM-jt-gk8" secondAttribute="centerX" id="Mj1-m3-Tem"/>
-                            <constraint firstItem="eKw-jz-IKZ" firstAttribute="width" relation="greaterThanOrEqual" secondItem="bjM-jt-gk8" secondAttribute="width" id="gf7-cj-mJT"/>
-                            <constraint firstItem="bjM-jt-gk8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lO0-30-F10"/>
-                            <constraint firstItem="eKw-jz-IKZ" firstAttribute="height" relation="greaterThanOrEqual" secondItem="bjM-jt-gk8" secondAttribute="height" id="wKm-ya-MyW"/>
+                            <constraint firstItem="eKw-jz-IKZ" firstAttribute="centerY" secondItem="bjM-jt-gk8" secondAttribute="centerY" id="IoQ-dE-MvV"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="bjM-jt-gk8" secondAttribute="bottom" constant="38" id="Luq-yh-pDs"/>
+                            <constraint firstItem="db5-50-M4f" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Q5q-6P-mOb"/>
+                            <constraint firstItem="eKw-jz-IKZ" firstAttribute="width" relation="greaterThanOrEqual" secondItem="bjM-jt-gk8" secondAttribute="width" id="Rjn-U6-evj"/>
+                            <constraint firstItem="db5-50-M4f" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="WD4-26-1s5"/>
+                            <constraint firstItem="eKw-jz-IKZ" firstAttribute="height" relation="greaterThanOrEqual" secondItem="bjM-jt-gk8" secondAttribute="height" id="m5X-jr-Xde"/>
+                            <constraint firstItem="db5-50-M4f" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="ukq-IG-hqn"/>
+                            <constraint firstItem="bjM-jt-gk8" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="yFZ-2X-AHi"/>
+                            <constraint firstItem="eKw-jz-IKZ" firstAttribute="centerX" secondItem="bjM-jt-gk8" secondAttribute="centerX" id="zsZ-Qa-Vnf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
