--- a/Serial Vision/Assets/Base.lproj/Main.storyboard
+++ b/Serial Vision/Assets/Base.lproj/Main.storyboard
@@ -44,13 +44,13 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bjM-jt-gk8" customClass="SerialCodeView" customModule="Serial_Vision" customModuleProvider="target">
-                                <rect key="frame" x="160.5" y="547.5" width="54" height="32.5"/>
+                                <rect key="frame" x="166.5" y="559.5" width="42" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eKw-jz-IKZ">
-                                <rect key="frame" x="160.5" y="547.5" width="54" height="32.5"/>
+                                <rect key="frame" x="166.5" y="555" width="42" height="30"/>
                                 <connections>
                                     <action selector="tapOnSerialNumber:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yUX-pE-ESE"/>
                                 </connections>
@@ -180,6 +180,7 @@
                                                     <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                                                     <connections>
                                                         <action selector="usernameChanged:" destination="Orf-He-qJH" eventType="editingChanged" id="g2N-Tp-Z7K"/>
+                                                        <outlet property="delegate" destination="Orf-He-qJH" id="Ur7-b9-zIV"/>
                                                     </connections>
                                                 </textField>
                                             </subviews>
